# ChangeLog for app-vim/command-t
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/command-t/ChangeLog,v 1.12 2013/12/17 09:12:28 radhermit Exp $

*command-t-1.6 (17 Dec 2013)

  17 Dec 2013; Tim Harder <radhermit@gentoo.org> +command-t-1.6.ebuild:
  Version bump.

*command-t-1.5.1 (26 Sep 2013)

  26 Sep 2013; Tim Harder <radhermit@gentoo.org> +command-t-1.5.1.ebuild:
  Version bump.

*command-t-1.5 (20 Sep 2013)

  20 Sep 2013; Tim Harder <radhermit@gentoo.org> +command-t-1.5.ebuild:
  Version bump.

  06 Aug 2012; Tim Harder <radhermit@gentoo.org> -command-t-1.2.1-r1.ebuild:
  Remove old.

  06 Aug 2012; Tim Harder <radhermit@gentoo.org> command-t-1.4.ebuild:
  Enable verbose build output.

*command-t-1.4 (03 Aug 2012)

  03 Aug 2012; Tim Harder <radhermit@gentoo.org> +command-t-1.4.ebuild:
  Version bump.

  28 Feb 2012; Tim Harder <radhermit@gentoo.org> command-t-1.3.1.ebuild:
  Die if removal fails.

*command-t-1.3.1 (28 Feb 2012)

  28 Feb 2012; Tim Harder <radhermit@gentoo.org> +command-t-1.3.1.ebuild:
  Version bump.

  13 Sep 2011; Tim Harder <radhermit@gentoo.org> command-t-1.2.1-r1.ebuild:
  Remove unnecessary permission setting and die on file removal failures.

  22 Jul 2011; Tim Harder <radhermit@gentoo.org> command-t-1.2.1-r1.ebuild:
  Add a couple more cruft filetypes to remove before installation.

*command-t-1.2.1-r1 (22 Jul 2011)

  22 Jul 2011; Tim Harder <radhermit@gentoo.org> -command-t-1.2.1.ebuild,
  +command-t-1.2.1-r1.ebuild:
  Revision bump and remove old. Install all ruby files in ruby specific
  directories.

*command-t-1.2.1 (02 Jun 2011)

  02 Jun 2011; Tim Harder <radhermit@gentoo.org> +command-t-1.2.1.ebuild,
  +metadata.xml:
  Initial import.
