@@ -5,22 +5,24 @@ DIST command-t-1.3.1.tar.bz2 24190 SHA256 920dd603fa940ee43277a9a36b3c7c69cadf17
 DIST command-t-1.4.tar.bz2 26328 SHA256 9068775e016a56b1a77d9352002e891a4f44ffa24f7a7d35e97a321ed7b5723a SHA512 5adb7a68de085f3cec20ff96f1259a1741ca1df92f334c1987dd822d35a3ccca7624d089bfdd8742350e95cff1c1bf438be5444a8fcb227789e26aae1f9e41ea WHIRLPOOL c3868498f8cdd59fd47d466e5bcbd574361dfdc9a682d616c431e0215578e5fdc482e3129625e5133e9e8bdd59840d2c12b8535bd57d0348b0e88821537017d5
 DIST command-t-1.5.1.tar.bz2 27478 SHA256 7f319d2c842b01cde613f57d6a84937d92393dbc8444da4dba08dce5c1e7b9f9 SHA512 55c0d46ff4cb97ec8edc151a720ea9e63313b97ba3dcdf8df867956c1984736bf86b049fe44aa33b4905167e436b0c902deaa08f23b4088e18c14a2197845f6f WHIRLPOOL 596cae2c32a8028e97027aaa0a811e73741b9ed7c4d27faf092d3df5dd830c31e6e42fe651123d7e9fa8f5d9530d07e265114bd59d129bf40b7b0085a455d722
 DIST command-t-1.5.tar.bz2 27494 SHA256 ddffdc1fadd0128523ac564645de544bcb9428ee4ad1236985d045ecd35866bb SHA512 d7ff149a4ba62e7dbc121db48a11e0de4f44788e677c56e9045ad48144f931ce8801d8ed83fbd69baf78b2afa61445f5f0e54c581c1451cdae4bbaaed2758bf5 WHIRLPOOL f2b22d690a72eb0c020563b1706c577bb43e62ce7163730d7155d0e0430e2e8a502a4c6cc43ce9b17de671da17bfc0068dfa80110738f957512b86791490e264
+DIST command-t-1.6.1.tar.bz2 29403 SHA256 d04cb93fc8f90fd550f589da49c8cda1781ee8839ba0f52d7630f8a86fa27884 SHA512 5d10a7c8a4fb4ffe3fc03b4e976b3b323abd336884cac859b1cf17387990e38382706e262e324375d0a90ccf3b87122ad2cdb16996d4190c088304facf2f6dda WHIRLPOOL 2cf6bae8e1cb6bfd5dbab6a9e11b2645575b55a5adba50b7f8d3f01ee2f02b174fa10bd10d5d4ea8dc23253004195ea9b071b9d4427d6555aff6e56c9bdf2929
 DIST command-t-1.6.tar.bz2 28658 SHA256 e9b87a90e005343ef4a3a42585449f1679c022d37466054d8b0f849b39bcce8c SHA512 c8f7dc4d2e33a94745660e59842a251a510bcdfdcf666b84c0c393dae4eea4b709787b0ebf24bd22acfce7a2c5c4e95c28ba902943ea19a3458bef2a382d8a8b WHIRLPOOL 3f5ecdc7110f98b1e15006b634a5bc0872326257eb436ae4239cd949a0b68079d3637ce69a11548792b27eed5d5cbde2ea091b1ee2ec0732e4129abb71f316d6
 EBUILD command-t-1.3.1.ebuild 1046 SHA256 43d2c21c0324fc78e37620b42e3b0ee21e3d0596d6fe3d7098803ee63aadc9f4 SHA512 542643acddd9b35dc7d02dc2e75d8b584d179da339ef0892e439d32bc43982766f8804fd6abeaae0a5390a4bf1ba072c34949553a4806bee0a9983cafe2a253c WHIRLPOOL 19ad5c1485d10686d406c9338383b47b6287b6617b15d1c2d8a94f18bdb9e61ce0b3ed35056f0db63395ac267445a07400f468dc058dcbfa905e9ecb47890a97
 EBUILD command-t-1.4.ebuild 982 SHA256 37107e68b30a2da648ba76e22a1b17b138069c6c2c42e93d1750f3f9247aa52f SHA512 89cba1b8338d82f51b17ce6635dceebc5ee29b31ee7a77331f6787011bb635546dc69cd986b9090c94a3246c57ca7077a70a7abb495b3bcce4e409e659d90b65 WHIRLPOOL c97e456e66fd0811c787c8c55a37ce878fb23162afa2a21b7bf9313e785001be076c298398c5c8bc4bdce353b2c7989e41d2d2eb27cbabe425db2ff561e0e25b
 EBUILD command-t-1.5.1.ebuild 983 SHA256 ad016696f87d2aab5fae849e3cc9f9ce37b66e17b856d5bf1c9de4c024f9f66a SHA512 202f8f17f3dc2aaa4640e115819b89236ee4af604522a14d0e1040cac53c9c7a59e7d7969470fa793091690f880fb01c2d291354cc92e32469e3eb821685f09b WHIRLPOOL 7285e0b28aa7ab3e3617fd26c472610f436ac4bf6c397ed0c8d620646d95394c4b56aa2cb3344fd4f9ea063ca91d756175b6e6ce0ed99a6f973a89264b65505d
 EBUILD command-t-1.5.ebuild 981 SHA256 e83b03b4e69bc8e424a03d99cbe9780bd1314e310eda45136893d8438dd9cdbd SHA512 1bd8ed18ee3fdc736e1daaa04699355c7ac29b509e226168c3eefcceb774ba5be45fe04295e73c17a71ecfb2114b92c62b5a18c1f5daa03cfec9682058e8ff04 WHIRLPOOL 52cf75ac474a5c06ebf869fa1d21813e5bd45ee4690b816d33f2ea01d77c1cddc1a7d7f8e1262353f96f36af85302574b8bcbca0ef3e1e71ae592a8ab4e33567
+EBUILD command-t-1.6.1.ebuild 983 SHA256 2a027a84e530deec7269dcf58b0700199e18123580d14a97ea0ef855b19fe919 SHA512 09778716e0ceeb929482096d0db1df9655a0b55da3bc9e3933d726f2eff3bca1ca9f3b1fdab1981264af42185147a2d1e0e514a3164415e6335ef4abef08b147 WHIRLPOOL 793b708d48e74a0f1fdaf173590e23aa5a9539215cb2e986d1a1d13b4db525d35a281e8a94cafe8f033cc4e9c6ffdb2cd2d64b7da7ad167b37860ebd3f4e9426
 EBUILD command-t-1.6.ebuild 981 SHA256 a3c68b34f7eb9223516ca352173cc9bcaa035d594aece17b244a331c4e39ded5 SHA512 863ae5164cdfc4e4b363d5818a877775824b2eb4c9d1dfd783280e030bba5460afbce2367d8e2900e912662438430a6dc06241c7937ec50697437c53de46d830 WHIRLPOOL 3df857f4ed378efb44b978a317b6698aa3998805df772b23c22fac0e7ec1eaed72184627b1539628a5a45f5bb2897bd9c01fda9eade5190304ef60cc18c5c769
-MISC ChangeLog 1771 SHA256 eaaafde820ea6b742f939eeeaef077ac8fdb020008ee8e410872ba270bc912fc SHA512 6c94ade12c9f53657c7305d6a85553c6c045658fefb34fae0ad93ae63788ce008b0ef8a4db51e16ee0fb1d1de3701f66a91c18afd6c0adccc8df9ae1a265ed38 WHIRLPOOL 1ff691c035e7407664c7b03bf0daf14f8bef764b86b1165efe3f1f4709e30f7bb2762c28af6c61afa449eefbbfd0463c2dfd52d0a1c7d590883ecaf1b1f42b6c
+MISC ChangeLog 1894 SHA256 144b5bc84d2c158b0219a29addd7514bd1014ad9d1052028ef8db18cebfc900f SHA512 bc4b03786323beaba67e073d4045fcf0f3755b9cbcc17c0f6a554735a1d81e3883264b90e3c285bae2ba6424f6c8cdd909ac0fc4948aed2e4ebb8c608f845ce3 WHIRLPOOL f5cb2130d1333048fa1ff9af34dafada4680494030bbe8a284fef853f21bb88086780faf5eed8bf5bb4a47a689ad970e4ac3d1792c61d1bfb19d486b6f2f4286
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSsBWAAAoJEEqz6FtPBkyj3rgIAK+AaAAPRuyuMOrFBf5tbh6/
-KuZPFISlXqV2mdiGSRSuAmcVd0OXa43yIXSOibQz09IUWtlumH59Ld7J4V9IWJWN
-/HTEcR393K1E2U6iF+JWUqrvTbvv10tYWa+VAMMonPOrRgSSsJffCVQJ1F1kXJSE
-b7VfPBsJSzCCRJUD4ubY4LsJylrhciH7iwVU5R7cI3oGZ9x5L726leSc5wwY1dvL
-2LrF/WG33TzycvuAMA7b9ZoQuIp+hKxVleX6eteW9D41FO+e3rHGd/dkuVbaLLQb
-W7dXYDskd5Sd4MwhIs5TjmwFy/qN0VwvBNXUOrKdkO/k5ohkokBi8/EN8+hJs+A=
-=OeeN
+iQEcBAEBCAAGBQJSt+BbAAoJEEqz6FtPBkyjSeEH/AsZc68pMi/1CdxHefPXftoi
+WUnHuLXLJaRVkCXHE/HwBeAZzb8HKPm19kkAUhZTlomk0QPrAyZ8QeQzVivSxPIB
+QmUoNFc+Fe7qtBGIC0LvxDck2l/bCUx7AqX63rmv5mEK7KpqGyTQNsb1B8O7MwCV
+zUqHBK+H5EgTU/sBisMh+APF3rYd0zuvxAFqAW2HfV2BmL33pcJG9k/VL9hzkOdU
+6il0T3GqyMmDTDBBNqTvjVRF7ewkXVzlpQ9YFw+wGiiZ2uQMWR9MR7GMpLLbDQ0j
+RGKlBPqWTLLoteUS8hOI0A6mVt9NiOWZL+3no7lpnVNNpyLcI5bnvd9+XKs88nE=
+=MIcI
 -----END PGP SIGNATURE-----
